ecmascript/parser/tests/test262-error-references/fail/a38011d2c010999e.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/a38011d2c010999e.js:1:7
  |
1 | for({a=0};;);
  |       ^

